4/13/2026 ArrayReaderImpl.java refactor to .strip() .isBlank()